# hardware

./: LICENSE  README.md  apply_configuration.py  config.json  pyproject.toml
examples/: test_rgb_cam.py
src/hardware/: calibrate_rgb_cam.py  camera.py  scan_rs_cam.py
